# intelligent-assistant

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  V1-UAT-QUICK.md  V1-UAT-QUICK.zh-CN.md  V1-UAT.md  V1-UAT.zh-CN.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.1.88-MILESTONE-AUDIT.md  v2.1.88-REQUIREMENTS.md  v2.1.88-ROADMAP.md  v2.2-completion-report.md  v2.2-完成报告-中文版.md  v2.2-测试用例清单-中文版.md
.planning/phases/01-desktop-shell-project-foundation/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-UI-CHECK.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  INTERACTION-MODEL.md  PITFALLS.md  STACK.md  SUMMARY.md  UI-PATTERNS.md  VISUAL-DESIGN.md
src/: App.tsx  main.tsx  react-speech-recognition.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assistant_service.rs  credential_service.rs  execution_service.rs  lib.rs  main.rs  project_service.rs  session_service.rs
src/styles/: app-shell.css
tests/e2e/: approval-flow.spec.ts  capabilities.spec.ts  chooser.spec.ts  drawer-panel.spec.ts  keyboard-navigation.spec.ts  presets.spec.ts  review-flow.spec.ts  startup.spec.ts  status-system.spec.ts  streaming-flow.spec.ts  theme-switching.spec.ts  visual-alignment.spec.ts
(+202 files in other folders)
