[package]
name = "intelligent_assistant"
version = "0.1.0"
edition = "2021"

[lib]
name = "intelligent_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
dirs = "5"
keyring = { version = "3", features = ["windows-native"] }
