[package]
name = "intelligent_assistant"
version = "0.1.1"
edition = "2021"

[lib]
name = "intelligent_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
dirs = "5"
keyring = { version = "3", features = ["windows-native"] }
